# TBRaster

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  LICENSE  main.cpp
srcs/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Defs.h  Image.hpp  Mesh.cpp  Mesh.h  Pixel.h  Raster.cpp  Raster.h  Triangle.cpp  Triangle.h
tests/: testCamera.cpp  testGeometry.cpp  testImage.cpp  testTriangle.cpp
